# elements

./: .gitignore  AUTHORS  README.md  meson.build
.github/: FUNDING.yml
.github/workflows/: gettext.yml  main.yml  release.yml
data/: app.css  application.css  com.github.eudaldgr.elements.appdata.xml  com.github.eudaldgr.elements.appdata.xml.in  com.github.eudaldgr.elements.desktop  com.github.eudaldgr.elements.desktop.in  com.github.eudaldgr.elements.gresource.xml  com.github.eudaldgr.elements.gschema.xml  com.github.freeeradicals.elements.appdata.xml  com.github.freeeradicals.elements.desktop  com.github.freeeradicals.elements.gresource.xml  gresource.xml  gschema.xml  meson.build  stylesheet.css
data/styles/: global.css
debian/: changelog  control  copyright  debhelper-build-stamp  files  rules
debian/com.github.eudaldgr.elements/DEBIAN/: control  md5sums
debian/com.github.eudaldgr.elements/usr/share/doc/com.github.eudaldgr.elements/: copyright
docs/: index.html
extra/: fr.po
meson/: post_install.py
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.eudaldgr.elements.pot  com.github.freeeradicals.elements.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+160 more)
po/extra/: POTFILES  extra.pot  fr.po  ja.po  pt.po
src/: Application.vala  Constants.vala  Elements.vala  Main.vala  MainWindow.vala  Window.vala  application.vala  config.vala.in  constants.vala  elements  main.vala  mainWindow.vala  meson.build  window.vala
src/Atom/: AtomDraw.vala  Properties.vala  PropertiesStructure.vala
src/Layouts/: HeaderBar.vala  Popover.vala  Stack.vala
src/Lib/: Elements.vala  Types.vala
src/Orbitals/: Orbital_d.vala  Orbital_f.vala  Orbital_p.vala  Orbital_s.vala  Stacks.vala
src/Views/: .goutputstream-VLZTHZ  AtomView.vala  Default.vala  History.vala  HistoryView.vala  Main.vala  MainPeriodic.vala  OrbitalPeriodic.vala  PeriodicView.vala  Properties.vala  PropertiesView.vala  RadiusPeriodic.vala  eVPeriodic.vala
src/Widgets/: HeaderBar.vala  Popover.vala  Search.vala  Stack.vala  StackAtom.vala
src/atom/: properties.vala
src/layouts/: headerBar.vala
src/lib/: elements.vala
src/views/: historyView.vala  periodic.vala  periodicView.vala
src/widgets/: headerBar.vala  popover.vala  stack.vala
